clang/test/BSC/Negative/SafeZone/generic_instantiation_function/generic_instantiation_function.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

#define NULL ((void*)0)

_Safe T max_a<T>(T a, T b) {
  return a > b ? a : b;
}

_Safe T max_b<T>(T a, T b) {
  return a > b ? a : b;
} // expected-error {{memory leak of value: `a`}} 
// expected-error@-1 {{memory leak of value: `b`}}

_Safe T max_c<T>(T a, T b) {
  return a > b ? a : b;
}

void genericFun(){
  int a = 1;
  double b = 2.0;
  int c = max_a<int>(1, 2); // ok
  int* _Owned p = (int* _Owned)&a;
  int* _Owned q = (int* _Owned)&a;
  int* _Owned m = max_b<int* _Owned>(p, q); // expected-note{{in instantiation of function template specialization 'max_b<int *_Owned>' requested here}}
  int *n = max_c<void *>((void*)0, (void *)0);

}// expected-error {{memory leak of value: `m`}}

_Safe int* foo_a<T>(int* a, T b) {
  return a > b ? a : b;
}

_Safe int* foo_b<T>(int* a, T b) {
  return a > b ? a : b;
}

_Safe T moo_a<T>(T a) {
  a();       // expected-error{{unsafe function call is forbidden in the safe zone}}
  return a;
}

_Safe T moo_b<T>(T a) {
  a();
  return a;
}

_Safe T moo_c<T>(T a) {
  a();         // expected-error{{unsafe function call is forbidden in the safe zone}}
  _Unsafe {
    a();       // ok
    _Safe {
      a();     // expected-error{{unsafe function call is forbidden in the safe zone}}
    }
    _Unsafe {
      a();     // ok
    }
  }
  _Safe {
    a();       // expected-error{{unsafe function call is forbidden in the safe zone}}
    _Unsafe {
      a();     // ok
    }
    _Safe {
      a();     // expected-error{{unsafe function call is forbidden in the safe zone}}
    }
  }
  return a;
}


void unsafeFun() {};
_Safe void safeFun(void) {};
void (*unsafeFunPoint)();

int test_generic_type_fun() {
  moo_a(unsafeFun);           // expected-note{{in instantiation of function template specialization 'moo_a<void (*)(void)>' requested here}}
  moo_b(safeFun);             // OK
  moo_c(unsafeFunPoint);      // expected-note{{in instantiation of function template specialization 'moo_c<void (*)(void)>' requested here}}

}

_Safe T poo_a<T>(T a) {
  if (*a) {
    return a;
  }
  return a;
}

_Safe T poo_b<T>(T a) {
  if (*a) {               // expected-error{{'*' operator is forbidden in the safe zone}}
    return a;
  }
  return a;
}

_Safe T poo_c<T>(T a) {
  if (*a) {
    return a;
  }
  return a;
}

int test_generic_type_point() {
  int a = 1;
  int *p;
  int* _Owned q = (int* _Owned)&a;
  int* m = poo_b(p);         // expected-note{{in instantiation of function template specialization 'poo_b<int *>' requested here}}
  int* _Owned n = poo_c(q);
  return 0; // expected-error {{memory leak of value: `n`}}
}

void diffPointCastConver<T>(void) {
  _Unsafe {
    T *a = NULL;
    _Safe {
      void *b = a;  // expected-error{{conversion from type 'int *' to 'void *' is forbidden in the safe zone}}
      T *c = b;   // expected-error{{conversion from type 'void *' to 'int *' is forbidden in the safe zone}}
    }
  }
}

_Safe T qoo_a<T>(void)
{
  T a = 1.0;
  float b = a;  // expected-error{{conversion from type 'double' to 'float' is forbidden in the safe zone}}
  return a;
}

_Safe T qoo_b<T>(void)
{
  T a = 1.0;
  float b = a;
  return a;
}

int main() {
  diffPointCastConver<int>();  // expected-note{{in instantiation of function template specialization 'diffPointCastConver<int>' requested here}}
  qoo_a<double>();             // expected-note{{in instantiation of function template specialization 'qoo_a<double>' requested here}}
  qoo_b<float>();              // ok
  return 0;
}
